# n1ctf-2018

./: LICENSE  README.md
challenges/crypto/baby_N1ES/: N1ES.py  challenge.py  flag.txt
challenges/crypto/easy_fs/: challenge  desc.txt  flag.txt
challenges/crypto/rsa_padding/: desc.txt  flag.txt
challenges/misc/APFS/: desc.txt  flag.txt
challenges/misc/Lipstick/: desc.txt  flag.txt
challenges/ppc/losetome/: desc.txt  flag.txt
challenges/ppc/mathGame/: desc.txt  flag.txt
challenges/pwn/Chakra/: flag.txt
challenges/pwn/beeper/: desc.txt  flag.txt
challenges/pwn/memsafety/: desc.txt  flag.txt
challenges/pwn/network_card/: desc.txt  flag.txt
challenges/pwn/null/: desc.txt  flag.txt
challenges/pwn/supersix's image kitchen/: desc.txt  flag.txt
challenges/pwn/trustworthy/: desc.txt  flag.txt
challenges/pwn/vote/: desc.txt  flag.txt
challenges/reverse/LFI/: LFI_stripped.luac  flag.txt
challenges/reverse/OldDriver of Akina/: desc.txt  flag.txt
challenges/reverse/baby unity3d/: flag.txt
challenges/reverse/baby_neural_network/: flag.txt
challenges/reverse/patience/: desc.txt  flag.txt
challenges/web/77777/: desc.txt  flag.txt
challenges/web/babysqli/: desc.txt  flag.txt
challenges/web/easy php/: desc.txt  flag.txt
challenges/web/funning eating cms/: desc.txt  flag.txt
source/crypto/easy_fs/: challenge.c
source/crypto/rsapadding/: rsa_padding.py
source/reverse/patience/: LICENSE  Makefile  generate.py  patience.cabal  stack.yaml
source/reverse/patience/src/: Main.hs  flag.h
writeups/web/: 77777.md  babysqli  babysqli.md
(+56 files in other folders)
