name:                patience
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/marche147/patience#readme
license:             BSD3
license-file:        LICENSE
author:              Marche Yu
maintainer:          bitmarche@gmail.com
copyright:           marche147
category:            RandomStuffz
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable patience
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
